<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_bg" >
	<LinearLayout 
        	android:id="@+id/main_search_set"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
        	android:layout_marginLeft="15dp"
            android:gravity="center"
            android:onClick="true"
            android:orientation="vertical">
    	<ImageView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:background="@drawable/gears"
        	android:contentDescription="@string/img_description"
        	/>
    </LinearLayout>
    <LinearLayout 
        	android:id="@+id/main_search_myself"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">
        <TextView
            android:id="@+id/main_search_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/main_search_ip"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white" 
            />
        
    </LinearLayout>
    <com.example.file_transfer.view.SearchDevicesView
        android:id="@+id/search_device_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </com.example.file_transfer.view.SearchDevicesView>
    
	<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="100dip"
        android:layout_alignParentBottom="true"
        android:id="@+id/main_bottom_layout"
        >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:src="@drawable/main_board" 
            android:contentDescription="@string/img_description"/>

        <ImageView
            android:id="@+id/main_bottom1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/main_button_record" 
            android:contentDescription="@string/img_description"/>

        <ImageView
            android:id="@+id/main_bottom2"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="18dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/main_button_search" 
            android:contentDescription="@string/img_description"/>

        <ImageView
            android:id="@+id/main_bottom3"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="18dp"
            android:layout_marginRight="17dp"
            android:src="@drawable/main_button_list" 
            android:contentDescription="@string/img_description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="3dp"
            android:text="@string/record"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="3dp"
            android:text="@string/searchone"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="3dp"
            android:text="@string/connection"
            android:textColor="#ffffff" />
    </RelativeLayout>

</RelativeLayout>
